tests/code/pages/errors/format-checker-var-case.tht



fun getFlag($fl) {

    $aVAR = 1

}